[gd_scene load_steps=18 format=3 uid="uid://cnc7r7d27yn5c"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_as5lx"]
[ext_resource type="Script" path="res://Scenes and Scripts/universe.gd" id="1_f3b25"]
[ext_resource type="PackedScene" uid="uid://blu0n6lwfysjf" path="res://Scenes and Scripts/UI/Menus/MainMenu/main_menu.tscn" id="1_qkr4k"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="2_6gvvu"]
[ext_resource type="PackedScene" uid="uid://c7n4o6dbkwilh" path="res://Scenes and Scripts/Levels/world.tscn" id="3_m7wj1"]
[ext_resource type="PackedScene" uid="uid://b5pj0lanxu0o6" path="res://Scenes and Scripts/UI/ColourPicker/palette_list.tscn" id="5_yvg3b"]
[ext_resource type="PackedScene" uid="uid://b65u1c7v5mbh6" path="res://Scenes and Scripts/UI/Menus/controls_tab.tscn" id="6_a8qlc"]
[ext_resource type="PackedScene" uid="uid://cv3ttwhplgav" path="res://Scenes and Scripts/States/state_manager.tscn" id="6_qca7e"]
[ext_resource type="PackedScene" uid="uid://brd5auomhnn6l" path="res://Scenes and Scripts/UI/Cursor.tscn" id="7_s5a7m"]
[ext_resource type="Texture2D" uid="uid://btjrj2wemfwjq" path="res://Textures/Buttons/move_touch_button_normal.png" id="10_ihkyb"]
[ext_resource type="Texture2D" uid="uid://db6rdb3r8el1a" path="res://Textures/Buttons/move_touch_button_pressed.png" id="11_ojt0j"]
[ext_resource type="Texture2D" uid="uid://dbbrv15cfsttg" path="res://Textures/Buttons/cut_touch_button_normal.png" id="12_560ih"]
[ext_resource type="Texture2D" uid="uid://n2w0tydjaa33" path="res://Textures/Buttons/cut_touch_button_pressed.png" id="13_gqnb4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6pdgy"]
resource_local_to_scene = true
shader = ExtResource("2_6gvvu")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fc3qf"]
resource_local_to_scene = true
shader = ExtResource("2_6gvvu")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dqfcf"]
resource_local_to_scene = true
shader = ExtResource("2_6gvvu")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2hlep"]
resource_local_to_scene = true
shader = ExtResource("2_6gvvu")

[node name="Universe" type="Node2D"]
material = ExtResource("1_as5lx")
script = ExtResource("1_f3b25")

[node name="MainMenu" parent="." node_paths=PackedStringArray("PaletteMenu") instance=ExtResource("1_qkr4k")]
material = SubResource("ShaderMaterial_6pdgy")
offset_right = 640.0
offset_bottom = 360.0
PaletteMenu = NodePath("../FloatingMenus/PaletteMenu")

[node name="World" parent="." instance=ExtResource("3_m7wj1")]
material = SubResource("ShaderMaterial_fc3qf")

[node name="FloatingMenus" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PaletteMenu" parent="FloatingMenus" instance=ExtResource("5_yvg3b")]
material = SubResource("ShaderMaterial_dqfcf")
layout_mode = 1
offset_left = 318.0
offset_top = 171.0
offset_right = 278.0
offset_bottom = 131.0

[node name="PullOutTabs" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ControlsTab" parent="PullOutTabs" instance=ExtResource("6_a8qlc")]
material = SubResource("ShaderMaterial_2hlep")
layout_mode = 1
offset_left = 4.0
offset_top = -45.0
offset_right = -36.0
offset_bottom = -85.0

[node name="state_manager" parent="." instance=ExtResource("6_qca7e")]

[node name="Borders" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="BorderRectR" type="ColorRect" parent="Borders"]
layout_mode = 0
offset_left = 640.0
offset_top = -2.0
offset_right = 738.0
offset_bottom = 360.0

[node name="BorderRectD" type="ColorRect" parent="Borders"]
layout_mode = 0
offset_top = 360.0
offset_right = 640.0
offset_bottom = 444.0

[node name="BorderRectU" type="ColorRect" parent="Borders"]
layout_mode = 0
offset_top = -84.0
offset_right = 640.0

[node name="BorderRectL" type="ColorRect" parent="Borders"]
layout_mode = 0
offset_left = -98.0
offset_top = -2.0
offset_bottom = 360.0

[node name="ControlsLayer" type="CanvasLayer" parent="."]

[node name="Cursor" parent="ControlsLayer" instance=ExtResource("7_s5a7m")]

[node name="Buttons" type="Node2D" parent="ControlsLayer"]

[node name="Move" type="TouchScreenButton" parent="ControlsLayer/Buttons"]
material = ExtResource("1_as5lx")
position = Vector2(15, 309)
texture_normal = ExtResource("10_ihkyb")
texture_pressed = ExtResource("11_ojt0j")
action = "editing"

[node name="Delete" type="TouchScreenButton" parent="ControlsLayer/Buttons"]
material = ExtResource("1_as5lx")
position = Vector2(61, 309)
texture_normal = ExtResource("12_560ih")
texture_pressed = ExtResource("13_gqnb4")
action = "deleting"

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="problem_submitted" from="World" to="." method="_on_world_problem_submitted"]
